kubernetes/template/nexus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
      - name: nexus
        image: sonatype/nexus3
        ports:
        - containerPort: 8081
          name: http
        - containerPort: 5000
          name: docker
        volumeMounts:
        - name: nexus
          mountPath: /nexus-data
      volumes:
      - name: nexus
        persistentVolumeClaim:
          claimName: nexus
