kubernetes/template/nexus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
spec:
  type: NodePort
  selector:
    app: nexus
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 31100
      name: http
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 31101
      name: docker
